# composio

./: .gitignore  CONTRIBUTING.md  README.md  encryption_key.json  funztionz.db
docs/: composio.yaml  errors.mdx  mint.json
docs/examples/javascript/: lead-generator-agent-js.mdx  lead-outreach-agent-js.mdx  meeting-brief-agent-js.mdx
docs/examples/python/: customer-support-agent-python.mdx  lead_generator_agent_python.mdx  lead_outreach_agent.mdx  research-agent-python.mdx  scheduling-agent-python.mdx
docs/framework/: litellm.mdx
docs/patterns/triggers/: webhook_guide.mdx
js/: Makefile  package.dist.json
js/examples/customer-support-agent/: demo.mjs  pnpm-lock.yaml
js/examples/jira_agent/: package-lock.json  package.json  pnpm-lock.yaml
js/examples/jira_agent/app/: layout.tsx  page.tsx
js/examples/llama-perplexity/: README.md  demo.mjs  package-lock.json  package.json  wrangler.toml
js/examples/llama-perplexity/src/: worker.js
js/src/sdk/models/: connectedAccounts.ts
python/composio/client/enums/: _action.py  _app.py  _tag.py
python/composio/utils/: sentry.py
python/examples/advanced_agents/recruiter_agent/: main.py
python/plugins/babyagi/: babyagi_demo.py  setup.py
python/swe/agent/: agent.py  call_llm.py  run.sh  test_llm.py
python/swe/dockerfiles/: build.py
python/swe/dockerfiles/temp/: analysis.ipynb
python/swe/examples/pr_review_agent/: .gitignore  README.md  agent_lang.py  analysis.ipynb  codeanalysis.py  main.py  main_langgraph.py  pyproject.toml
python/swe/examples/pr_review_agent/agent/: helper.py  prompts.py  tools.py
(+21 files in other folders)
