[tool.poetry]
name = "agent"
version = "0.1.0"
description = "PR Review agent"
authors = ["angrybayblade <vptl185@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
llama-index = "0.11.5"
composio-core = ">=0.5.30"
composio-llamaindex = ">=0.5.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
